[tool.poetry]
name = "codinggames"
version = "0.1.0"
description = "Coding Game Challenge"
authors = ["jgaffiot <j.gaffiot@laposte.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
pandas = "^1.3.4"
plotly = "^5.4.0"
black = "^21.11b0"
flake8 = "^4.0.1"
pyupgrade = "^2.29.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
